# chess-client

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/audio/: mod.rs
src/core/: app.rs  constants.rs  events.rs  mod.rs  resources.rs  states.rs
src/game/: board.rs  mod.rs  moves.rs  pieces.rs  rules.rs  state.rs  systems.rs
src/graphics/: animations.rs  effects.rs  lighting.rs  materials.rs  meshes.rs  mod.rs  procedural.rs
src/input/: mod.rs
src/network/: mod.rs
src/settings/: mod.rs
src/ui/: mod.rs
