[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.1", features = ["default", "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_pbr", "bevy_ui", "bevy_text"] }
bevy-tokio-tasks = "0.16.0"
glam = "0.30.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = { version = "0.35.2", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

[features]
memory_stats = ["sysinfo"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
